# chess_ai

./: Dockerfile  LICENSE.md  README.md  agent.py  ai.py  board.py  chess_com_games_2023-11-23.pgn  chess_notebook.ipynb  config.py  docker-compose.test.yaml  docker-compose.yaml  entities.py  experiment.ipynb  experiment.py  game.py  main.py  medium.pgn  move.py  pieces.py  pyproject.toml  rules.py  run.sh  short.pgn  test.py  two.pgn
entities/: entitiy.py  human.py
notes/: reference.txt  suggested_improvements.txt
old_version_summer_2023/v1/: game.py
references/: forsyth_edwards_notation.txt
scripts/: test.sh
src/: app.py  game.py  monte-carlo-tree-search.py  play_as_black.py  play_as_white.py  play_pgn.py  stats.py
src/.ipynb_checkpoints/: experiment-checkpoint.ipynb
src/RL_Bot/: README.md  bot_tests.py  chess_bot.py
src/archive_july_2023/: notes.txt
src/chessGame/: autochess.py  chess.py  inputchess.py
src/entities/: ai.py  entity.py  human.py
src/game/: autochess.py  game.py  inputchess.py
src/knowledge/: board-positioning.md  openings.json  openings.md
src/pgn/: parsing.py
src/tree_searches/: MCTS.py  alpha-beta.py  evaluate.py  minimax.py  monte-carlo-tree-search.py  nick_monte_carlo_tree_search.py
tests/: Dockerfile  test.py
v0/: agent.py  board.py  pieces.py
v1/: ai.py  board.py  config.py  game.py  main.py  rules.py
v1/ai/: ai.py  heuristics.py
v1/entities/: agent.py  user.py
v1/objects/: board.py  color.py  move.py
v1/pieces/: bishop.py  king.py  knight.py  pawn.py  piece.py  queen.py  (+1 more)
v3/: board.py  chess.py  move.py
(+50 files in other folders)
